# stemsep

./: .gitignore  CLAUDE.md  CMakeLists.txt  PLAN.md  README.md  build-linux.sh  run-reaper.sh
.claude/: settings.local.json
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: BandFilter.cpp  BandFilter.h  CaptureRunner.cpp  CaptureRunner.h  DemucsRunner.cpp  DemucsRunner.h  TabRunner.cpp  TabRunner.h  Tunings.h
Source/UI/: Formatters.h  FrequencyDisplay.cpp  FrequencyDisplay.h  SeparationPanel.cpp  SeparationPanel.h  StemStrip.cpp  StemStrip.h
Tests/: BandFilterTests.cpp  PluginProcessorTests.cpp  main.cpp
scripts/: StemSep_setup.lua
